public/stylesheets/styles.css
body {
	text-align:center; 
  letter-spacing: 1px;
}

span, a, li , .btn, div{ 
  font-size: 20px; 
}

#new-client-form-center{ 
	display:inline-block;
	width:75%;
}


.form-group-group{ 
	margin-top: 3%; 
	margin-bottom: 3%;
}

.form-group-group .set-text-div-height{  
	height: 38px;
}

.span-vertical-align{ 
  font-size: 20px; 
  display: inline-block; 
  vertical-align: middle;
  line-height: 38px; 
  text-align: left; 
 }

.box-height-and-font{ 
  height:42px;
  font-size: 15px; 
 }

 #x-close{ 
 	float: right;
 }

.home-box{ 
	display:inline-block;
	width:50vw;
	background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
	border: 1px solid darkgray;
  border-radius: 4px; 
	margin: 25vh auto;
  padding: 30px 38px 66px;
}

#login-form-center{ 
  display:inline-block;
  width:40vw;
  background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
  border: 1px solid darkgray;
  border-radius: 4px; 
  margin: 25vh auto;
  padding: 30px 38px 66px;
 }

#search-bar-all{ 
  display:inline-block;
  width:75%;
}

.search-results{ 
  display:inline-block;
  width:65%;
}

.search-bar-all{ 
  display:inline-block;
  width:85%;
}

.search-results li { 
  cursor: pointer;
}

.list-group-item:hover{ 
  background-color: #EE7621;
}

.open-close-button{ 
  float: right;
  padding-right: 5%; 
}

.margin-for-visit-header{ 
  margin-top: 3%;
  margin-bottom:3%;
}

.notes-text-size{ 
  font-size: 16px; 
}

.panel-heading .accordion-toggle:after {
    content: "Close"; 
    font-size: 15px;    
}
.panel-heading .accordion-toggle.collapsed:after {
    content: "Open";  
    font-size: 15px;  
}

.panel-default{ 
  border-color: darkgray;
}

.home-box{ 
  display:inline-block;
  width:55vw;
  background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
  border: 1px solid darkgray;
  border-radius: 4px; 
  margin: 25vh auto;
  padding: 30px 38px 66px;
}

.home-buttons{ 
  display: inline-block;
  float: left;
  border-radius: 4px; 
  white-space: normal; 
  margin: 1%;
}

.new-client-button{ 
    width:48%;
}
.find-old-button{ 
    width:48%;
}

